--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,23 @@ services:
       - ollama-docker
 # Uncomment the below if you have a GPU
 ###################################
-#    deploy:
-#      resources:
-#        reservations:
-#          devices:
-#            - driver: nvidia
-#              count: 1
-#              capabilities: [ gpu ]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [ gpu ]
 ###################################
+  mongodb:
+    image: mongo:latest
+    ports:
+      - '27017:27017'
+
 networks:
   ollama-docker:
     external: false
 
 volumes:
   ollama: {}
+  mongo: {}
