--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=tipoftheday
+
+# Ollama / CodeGemma
 spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.chat.model=codegemma
 spring.ai.ollama.chat.enabled=true
+
+# MongoDB
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=rootuser
+spring.data.mongodb.password=rootpass
+spring.data.mongodb.database=tipoftheday
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
