--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.edwinsoto</groupId>
 	<artifactId>tipoftheday</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>tipoftheday</name>
+	<name>TipOfTheDay</name>
 	<description>Application that provides a tip of the day</description>
 	<properties>
 		<java.version>21</java.version>
