--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=tipoftheday
+spring.application.name=TipOfTheDayApplication
 
 # Ollama / CodeGemma
 spring.ai.ollama.base-url=http://localhost:11434
