--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,24 @@
 services:
+  devcontainer:
+    build:
+      context: ..
+      dockerfile: .devcontainer/Dockerfile
+    container_name: tip-of-the-day-dev-cont
+    volumes:
+      - ..:/workspace:cached
+    networks:
+      - tip-of-the-day
+    depends_on:
+      - mongodb
+      - ollama
+    ports:
+        - "8080:8080"
+    environment:
+      - MONGO_URI=mongodb://rootuser:rootpass@mongodb:27017
+      - OLLAMA_HOST=http://ollama:11434
+      - JAVA_HOME=/usr/local/openjdk-21
+    command: sleep infinity
+
   ollama:
     container_name: ollama
     volumes:
@@ -8,24 +28,24 @@ services:
     restart: unless-stopped
     image: ollama/ollama:latest
     ports:
-      - 11434:11434
+      - "11434:11434"
     networks:
       - tip-of-the-day
 ## Uncomment the below if you have a GPU
 ####################################
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [ gpu ]
+#    deploy:
+#      resources:
+#        reservations:
+#          devices:
+#            - driver: nvidia
+#              count: 1
+#              capabilities: [ gpu ]
 ####################################
   mongodb:
     container_name: mongodb
     image: mongo:latest
     ports:
-      - 27017:27017
+      - "27017:27017"
     volumes:
       - mongo-data:/data/db
     environment:
