--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TipOfTheDayApplication
 
 # Ollama / CodeGemma
-spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.base-url=http://ollama:11434
 spring.ai.ollama.chat.model=codegemma
 spring.ai.ollama.chat.enabled=true
 
@@ -11,5 +11,5 @@ spring.data.mongodb.username=rootuser
 spring.data.mongodb.password=rootpass
 spring.data.mongodb.database=tipoftheday
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.auto-index-creation=true
